fix accessibility contrast error

--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ h4 {
 
 .mobile-nav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #212121;
     position: fixed;
     width: 100%;
     top: 0;
@@ -220,7 +220,7 @@ h4 {
 
 .mobile-nav a:hover {
     background-color: orangered;
-    color: #333333;
+    color: #212121;
 }
 
 .reg-nav{
